# COMP0035CW1

./: .gitignore  README.md  cat_desc.csv  data_quality_report.csv  num_desc.csv  preview_head20.csv  pyproject.toml
src/: section1.1.py  section1.2.py  section2.0.py
